syntax = "proto3";

import "google/protobuf/wrappers.proto";

package com.bht.parkingmap.api.parkinglot;
option java_generic_services = true;
option java_multiple_files = true;

message ParkingLotInformation {
    int64 id = 1;
    string name = 2;
    string address = 3;
    string phone = 4;
    double ratingAverage = 5;
    int32 numberOfRating = 6;
    int32 availableSlot = 7;
    int32 totalSlot = 8;
}

service ParkingLotInformationService {
    rpc getParkingLotInformationByParkingLotId (google.protobuf.Int64Value) returns (ParkingLotInformation);
    rpc updateParkingLotInformation (ParkingLotInformation) returns (google.protobuf.BoolValue);
}